--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -14,7 +14,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:image"
-        content="https://res.cloudinary.com/dccibzcxp/image/upload/v1709836425/all_wb_mwmtsi.png"
+        content="https://res.cloudinary.com/dccibzcxp/image/upload/v1709840765/all_ajcokp.jpg"
   />
   <meta content="Centre moderne de formation en langues et en leadership" name="description">
 
@@ -261,7 +261,7 @@
             <div id="monitor">
               <div class="afrohk-TV">
                 <h3 class="text-center afrohk-text mb-2 py-0">
-                  <span class="afrohk">Afro</span><span class="tv"> Language Lab</span>
+                  <span class="afrohk">Afro</span><span class="tv"> Language <span class="lab">Lab</span></span>
                 </h3>
               </div>
               <div id="monitorscreen">
