--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,7 +14,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:image"
-  content="https://res.cloudinary.com/dccibzcxp/image/upload/v1709695363/ALL_TB_y3mrzx.png"
+  content="https://res.cloudinary.com/dccibzcxp/image/upload/v1709840765/all_ajcokp.jpg"
 />
 
 
