--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -176,21 +176,22 @@
       </a>
       <ul class="dropdown-menu mx-2" aria-labelledby="navbarDropdown">
         <li>
-          <a class="dropdown-item" href="/englishlang4all/clubs/home">Natural English Conversation Clubs</a>
+          <a class="dropdown-item" href="/englishlang4everyone">Afro English Class</a>
         </li>
         <li>
-          <a class="dropdown-item" href="/pecp">Personal English Coaching Program</a>
+          <a class="dropdown-item" href="/englishlang4all/clubs/home">Afro English Club</a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="/pecp">Afro English Coaching</a>
         </li>
       </ul>
-
       <a class="nav-link m-0" id="drop-down-contact" href="#footer"><span class="myNav-link">Contacts</span></a>
 
       <% if(typeof currentUser !=undefined){%>
         <% if (currentUser) {%>
           <a id="logout-mobile-nav" class="btn  me-2 my-2" style="background-color:  rgb(138, 7, 36); color: white ;" href="/login">Deconnexion</a>
           <%} %>
-
-              <%}%>
+          <%}%>
     </div>
 
     <div class="user me-5 py-3">
@@ -221,7 +222,7 @@
     <div class="content">
       <div class="banner-heading">
         <h1 class="afrohk-title"><span class="afro-title">Afro Language Lab </h1>
-        <h3 class="slogan">Apprenez la Langue Autrement</h3>
+        <h3 class="slogan">Centre Moderne des Langues et du Leadership</h3>
         <p style="text-align: start;"><a href="#apropos" class="more-btn">En Savoir Plus</a></p>
       </div>
     </div>
@@ -247,15 +248,14 @@
           <div class="presentation-text-wrapper" data-aos="fade-up" data-aos-duration="500">
             <h3 class="presentation-heading">MISSION</h3>
             <p class="presentation-paragraph">
-              Notre mission est de vous amener à parler naturellement l'Anglais en 6 mois
+              Se servir du digital pour développer la compétence humaine
             </p>
-
             <% if (!currentUser) {%>
               <a class="start-btn-1" href="#footer"> Appelez-nous</a>
               <%} %>
-
           </div>
         </div>
+
         <div class="col-lg-8 py-5">
           <div id="tv-container" data-aos="fade-up" data-aos-duration="500">
             <div id="monitor">
@@ -271,6 +271,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </section>
     <!-- End  About us -->
@@ -280,6 +281,7 @@
       <div class="section-title  container">
         <h2>Nos Programmes </h2>
         <p>Afro English</p>
+        <h5>Le programme qui vous fait apprendre l'Anglais autrement</h5>
       </div>
       <div class="container">
         <div class="row">
