--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -114,9 +114,9 @@
             </ul>
           </div>
           <ul class="footer-social">
-            <li><a id="m-facebook" target="_blank" href="https://web.facebook.com/AfroHK"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a id="m-facebook" target="_blank" href="https://web.facebook.com/profile.php?id=100091249963735"><i class="fab fa-facebook-f"></i></a></li>
             <li><a id="m-instagram" target="_blank" href="https://www.instagram.com/afro_h_k/"><i class="fab fa-instagram"></i></a></li>
-            <li><a id="m-linkedIn" target="_blank" href="https://www.linkedin.com/company/afro-house-of-knowledge"><i class="fa fa-linkedin"></i></a></li>
+            <li><a id="m-linkedIn" target="_blank" href="https://www.linkedin.com/company/afro-language-lab"><i class="fa fa-linkedin"></i></a></li>
             <li><a id="m-youtube" target="_blank" href="https://www.youtube.com/channel/UCoyOQOqSqRGjH8FrkvT4b0g"><i
                   class="fab fa-youtube"></i></a></li>
             <li><a id="m-whatsapp" target="_blank" href="https://wa.me/22653344444#"><i class="fa mx-2 fa-whatsapp"
@@ -125,10 +125,11 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
           <div class="service-widget footer-widget">
-            <div class="footer-title">Contacts</div>
+            <div class="footer-title">Contact</div>
             <div class="text">
               <p>Pissy, Ouagadougou</p>
-              <p>+226 53444444</p>
+              <p>+226 67323131</p>
+              <p>+226 53344444</p>
               <p>afrohkteam@afrohk.com</p>
             </div>
           </div>
