--- a/views/programs/englishlang4all/english4Everyone/home.ejs
+++ b/views/programs/englishlang4all/english4Everyone/home.ejs
@@ -4,6 +4,11 @@
 <h1 class="eng-title">Afro English Class</h1>
 </div>
 
+<!-- Intro -->
+<div class="intro container">
+<p><em class="text-primary">Afro English Class</em> propose des cours d'Anglais par niveau, en ligne et en présentiel</p>
+</div>
+
 <h1 class="class-title" style="margin-top: 5rem;">Cours d'Anglais par niveau</h1>
 <div class="container my-5">
     <!-- English by level -->
@@ -34,7 +39,7 @@
                                     <div id="monitor">
                                         <div class="afrohk-TV">
                                             <h3 class="text-center afrohk-text mb-2 py-0">
-                                                <span class="afrohk">AfroHK</span><span class="tv">Radar</span>
+                                                <span class="afrohk">Afro</span><span class="tv"> Language <span class="lab">Lab</span></span>
                                             </h3>
                                         </div>
                                         <div id="monitorscreen">
@@ -55,7 +60,7 @@
                 </div>
                 <hr>
                 <!-- <a href="" class="mb-2 mx-2 btn btn-outline-success">Témoignage</a> -->
-                <a href="/courses/65c01a3f09afc3a32fa5eaba" class="mb-2 mx-2 btn btn-outline-success">Etudier</a>
+                <a href="courses/65ea45accdc768b8ce3a52e8" class="mb-2 mx-2 btn btn-outline-success">Etudier</a>
                 <a class="mb-2 mx-2 btn btn-outline-secondary" data-bs-toggle="collapse" href="#contact-a" role="button"
                     aria-expanded="false" aria-controls="collapseExample">
                     S'inscrire
@@ -93,7 +98,7 @@
                                     <div id="monitor">
                                         <div class="afrohk-TV">
                                             <h3 class="text-center afrohk-text mb-2 py-0">
-                                                <span class="afrohk">AfroHK</span><span class="tv">Radar</span>
+                                                <span class="afrohk">Afro</span><span class="tv"> Language <span class="lab">Lab</span></span>
                                             </h3>
                                         </div>
                                         <div id="monitorscreen">
@@ -152,7 +157,7 @@
                                     <div id="monitor">
                                         <div class="afrohk-TV">
                                             <h3 class="text-center afrohk-text mb-2 py-0">
-                                                <span class="afrohk">AfroHK</span><span class="tv">Radar</span>
+                                                <span class="afrohk">Afro</span><span class="tv"> Language <span class="lab">Lab</span></span>
                                             </h3>
                                         </div>
                                         <div id="monitorscreen">
@@ -197,7 +202,7 @@
             <div class="card-wrapper">
                 <img class="img-fluid img-thumbnail"
                     src="https://www.creativeitinstitute.com/images/course/course_1663654149.jpg" alt="">
-                <h3 class="level-spc beg">Spoken English Class</h3>
+                <h3 class="level-spc beg">Spoken English</h3>
                 <!-- Button trigger modal -->
                 <button type="button" class="mb-2 mx-2 btn btn-primary" data-bs-toggle="modal" data-bs-target="#com">
                     En savoir plus
@@ -217,7 +222,7 @@
                                     <div id="monitor">
                                         <div class="afrohk-TV">
                                             <h3 class="text-center afrohk-text mb-2 py-0">
-                                                <span class="afrohk">AfroHK</span><span class="tv">Radar</span>
+                                                <span class="afrohk">Afro</span><span class="tv"> Language <span class="lab">Lab</span></span>
                                             </h3>
                                         </div>
                                         <div id="monitorscreen">
@@ -256,7 +261,7 @@
             <div class="card-wrapper">
                 <img class="img-fluid img-thumbnail"
                     src="https://www.englishreservoir.com/wp-content/uploads/2021/10/1-1-1024x576.png" alt="">
-                <h3 class="level-spc int">English Pronunciation Class</h3>
+                <h3 class="level-spc int">English Pronunciation</h3>
                 <!-- Button trigger modal -->
                 <button type="button" class="mb-2 mx-2 btn btn-primary" data-bs-toggle="modal" data-bs-target="#pro">
                     En savoir plus
@@ -276,7 +281,7 @@
                                     <div id="monitor">
                                         <div class="afrohk-TV">
                                             <h3 class="text-center afrohk-text mb-2 py-0">
-                                                <span class="afrohk">AfroHK</span><span class="tv">Radar</span>
+                                                <span class="afrohk">Afro</span><span class="tv"> Language <span class="lab">Lab</span></span>
                                             </h3>
                                         </div>
                                         <div id="monitorscreen">
@@ -316,7 +321,7 @@
                 <img class="img-fluid img-thumbnail"
                     src="https://thumbs.dreamstime.com/b/creative-writing-storytelling-education-concept-opened-book-school-study-learning-subject-book-review-summary-vector-icon-flat-123626764.jpg"
                     alt="">
-                <h3 class="level-spc adv">English Writting Class</h3>
+                <h3 class="level-spc adv">English Writting</h3>
                 <!-- Button trigger modal -->
                 <button type="button" class="mb-2 mx-2 btn btn-primary" data-bs-toggle="modal" data-bs-target="#wri">
                     En savoir plus
@@ -336,7 +341,7 @@
                                     <div id="monitor">
                                         <div class="afrohk-TV">
                                             <h3 class="text-center afrohk-text mb-2 py-0">
-                                                <span class="afrohk">AfroHK</span><span class="tv">Radar</span>
+                                                <span class="afrohk">Afro</span><span class="tv"> Language <span class="lab">Lab</span></span>
                                             </h3>
                                         </div>
                                         <div id="monitorscreen">
