--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,6 +5,7 @@
   <div class="px-5">
     <div class="footer-content">
       <div class="row">
+
         <div class="col-lg-4 col-md-3 col-sm-12 footer-column">
           <div class="logo-widget footer-widget">
             <svg height="100%" width="100%" stroke-miterlimit="10" class="svg-logo"
@@ -101,28 +102,22 @@
               </g>
             </svg>
             <div class="text">
-              <p class="footer-slogan">Learn a Language Differently</p>
+              <p class="footer-slogan">Centre moderne des Langues et du Leadership</p>
             </div>
           </div>
         </div>
+
         <div class="col-lg-4 col-md-5 col-sm-12  footer-column">
           <div class="service-widget footer-widget">
             <div class="footer-title">Liens Utiles</div>
             <ul class="list">
-              <li><a href="/pecp">Personal English Coaching Program</a></li>
-              <li><a href="/englishlang4all/clubs/home">Natural English Conversation Clubs</a></li>
+              <li> <i class="bi bi-vinyl-fill mx-2" style="color: rgb(111, 0, 255);"></i><a href="/englishlang4everyone">Afro English Class</a></li>
+              <li><i class="bi bi-vinyl-fill mx-2" style="color:  rgb(111, 0, 255);;"></i><a href="/pecp">Afro English Coaching</a></li>
+              <li><i class="bi bi-vinyl-fill mx-2" style="color:  rgb(111, 0, 255);;"></i><a href="/englishlang4all/clubs/home">Afro English Club</a></li>
             </ul>
           </div>
-          <ul class="footer-social">
-            <li><a id="m-facebook" target="_blank" href="https://web.facebook.com/profile.php?id=100091249963735"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a id="m-instagram" target="_blank" href="https://www.instagram.com/afro_h_k/"><i class="fab fa-instagram"></i></a></li>
-            <li><a id="m-linkedIn" target="_blank" href="https://www.linkedin.com/company/afro-language-lab"><i class="fa fa-linkedin"></i></a></li>
-            <li><a id="m-youtube" target="_blank" href="https://www.youtube.com/channel/UCoyOQOqSqRGjH8FrkvT4b0g"><i
-                  class="fab fa-youtube"></i></a></li>
-            <li><a id="m-whatsapp" target="_blank" href="https://wa.me/22653344444#"><i class="fa mx-2 fa-whatsapp"
-                  aria-hidden="true"></i></a></li>
-          </ul>
         </div>
+
         <div class="col-lg-4 col-md-4 col-sm-12 footer-column">
           <div class="service-widget footer-widget">
             <div class="footer-title">Contact</div>
@@ -136,9 +131,20 @@
         </div>
       </div>
     </div>
+  
   </div>
 </footer>
-
+<div style="height: 5px; background-color: rgb(88, 13, 188);"></div>
+<p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  text-align: center; margin-top: 5px;">Rejoignez-nous sur les réseaux sociaux</p>
+<ul class="footer-social d-flex justify-content-center">
+  <li><a id="m-facebook" target="_blank" href="https://web.facebook.com/profile.php?id=100091249963735"><i class="fab fa-facebook-f"></i></a></li>
+  <li><a id="m-instagram" target="_blank" href="https://www.instagram.com/afro_h_k/"><i class="fab fa-instagram"></i></a></li>
+  <li><a id="m-linkedIn" target="_blank" href="https://www.linkedin.com/company/afro-language-lab"><i class="fa fa-linkedin"></i></a></li>
+  <li><a id="m-youtube" target="_blank" href="https://www.youtube.com/channel/UCoyOQOqSqRGjH8FrkvT4b0g"><i
+        class="fab fa-youtube"></i></a></li>
+  <li><a id="m-whatsapp" target="_blank" href="https://wa.me/22653344444#"><i class="fa mx-2 fa-whatsapp"
+        aria-hidden="true"></i></a></li>
+</ul>
 <!-- main-footer end -->
 <div class="footer-bottom">
   <div class="container">
