--- a/views/user/userprofile.ejs
+++ b/views/user/userprofile.ejs
@@ -55,7 +55,7 @@
       <div class="program-wrapper">
         <div class="program-img-wrapper">
           <img
-            src="https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1679828340/Screen_Shot_2023-03-26_at_10.56.54_hjlani.png"
+            src="https://res.cloudinary.com/dccibzcxp/image/upload/v1696889990/Afro%20Language%20lab/IMG_8319_schlx0.jpg"
             class="img-fluid" alt="">
           <p class="nep d-inline-block">Club de Conversation Naturelle</p>
           <!-- Button trigger modal -->
