--- a/public/stylesheets/shared.css
+++ b/public/stylesheets/shared.css
@@ -46,7 +46,7 @@ a.active:focus {
 
 .flash-container {
   width: 40%;
-  font-family: "Roboto"serif;
+  font-family: "Roboto" serif;
   height: 2rem;
   padding: 0.5rem;
   letter-spacing: 0.1rem;
@@ -78,7 +78,7 @@ nav {
   /* top: 0; */
   /* left: 0; */
   /* right: 0; */
-  font-family: "Roboto"serif;
+  font-family: "Roboto" serif;
 }
 
 .navbar-top {}
@@ -111,7 +111,7 @@ nav {
 .myNav-link {
   font-size: 1.1rem;
   padding: 0 0 0.4rem 0;
-  font-family: "Roboto"serif;
+  font-family: "Roboto" serif;
   letter-spacing: 0.2rem;
   text-align: center;
   text-transform: capitalize;
@@ -129,7 +129,7 @@ nav {
 
 .nav-link-connexion {
   text-align: center;
-  font-family: "Roboto"serif;
+  font-family: "Roboto" serif;
   padding: 0.3rem 1rem;
   border-radius: 5px;
   color: rgb(243, 239, 237);
@@ -183,7 +183,7 @@ hk-shadow {
 
 #user {
   text-transform: capitalize;
-  font-family: "Roboto"serif;
+  font-family: "Roboto" serif;
   font-size: 1.5rem;
 }
 
@@ -200,7 +200,7 @@ hk-shadow {
 .dropdown-item {
   font-size: 1rem;
   color: #272626;
-  font-family: "Roboto"serif;
+  font-family: "Roboto" serif;
   text-align: center;
   font-weight: 600;
   text-transform: uppercase;
@@ -480,27 +480,28 @@ hk-shadow {
 /*--------------------------------------------------------------
 /* footer 
 ============================================================*/
-.svg-logo{
+.svg-logo {
   width: 70%;
   height: 70%;
 }
-.text{
+
+.text {
   align-self: center;
 }
 
-.slogan{
+.slogan {
   font-family: 'Playfair Display', serif;
-  color:  #5806c5;
-  
+  color: #5806c5;
+
   font-size: 1.2rem;
 }
 
-.top-footer-line{
+.top-footer-line {
   background-color: #5000c8;
   width: 100%;
 }
 
-.top-footer-line > p{
+.top-footer-line>p {
   text-align: center;
   position: relative;
   background-color: #5000c8;
@@ -510,29 +511,34 @@ hk-shadow {
   color: #ffffff;
   padding: 2rem 1rem;
   font-weight: 700;
-  margin-bottom: 27px; 
+  margin-bottom: 27px;
 }
 
-a, a:hover, a:focus, a:active {
-    text-decoration: none;
-    outline: none;
+a,
+a:hover,
+a:focus,
+a:active {
+  text-decoration: none;
+  outline: none;
 }
+
 ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.main-footer{
+.main-footer {
   position: relative;
   background: #ffffff;
 }
 
-.footer-content{
+.footer-content {
   position: relative;
-  padding: 35px 0px 50px 0px;
+  padding: 35px 0px 0px;
 }
-.footer-content:before{
+
+.footer-content:before {
   position: absolute;
   content: '';
   background: url();
@@ -565,31 +571,39 @@ ul {
 }
 
 
-.footer-column,  .logo-widget .footer-widget{
-display: flex;
-flex-direction: column;
-justify-content: start;
-align-items: first baseline;
+.footer-column,
+.logo-widget .footer-widget {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: first baseline;
 }
 
-.footer-content .logo-widget{
+.footer-content .logo-widget {
   position: relative;
   margin-top: -5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
- .footer-social, .whatsApp{
-margin: 30px 0;
+.footer-social {
+  margin: 10px 0;
 }
-.footer-content  .footer-social li{
+
+ .footer-social li {
   position: relative;
   display: inline-block;
   margin-right: 9px;
   margin-top: 7px;
 }
-.footer-content  .footer-social li:last-child{
+
+.footer-social li:last-child {
   margin-right: 0px;
 }
-.footer-content  .footer-social li a{
+
+.footer-social li a {
   position: relative;
   display: inline-block;
   width: 42px;
@@ -598,17 +612,21 @@ margin: 30px 0;
   text-align: center;
   border-radius: 50%;
 }
-.footer-content  .footer-social li a:hover{
+
+.footer-social li a:hover {
   color: #ffffff;
   background: #5806c5;
 }
-.footer-content .logo-widget .logo-box{
+
+.footer-content .logo-widget .logo-box {
   margin-bottom: 25px;
 }
-.footer-content .logo-widget .text p{
+
+.footer-content .logo-widget .text p {
   margin-bottom: 32px;
 }
-.footer-content .footer-title{
+
+.footer-content .footer-title {
   position: relative;
   font-size: 24px;
   line-height: 35px;
@@ -617,26 +635,35 @@ margin: 30px 0;
   font-weight: 700;
   margin-bottom: 27px;
 }
-.footer-content .service-widget .list li{
+
+.footer-content .service-widget .list li {
   display: block;
   margin-bottom: 12px;
 }
-.footer-content .service-widget .list li a{
+
+.footer-content .service-widget .list li a {
   position: relative;
   display: inline-block;
   color: #1e1f21;
+  font-weight: 500;
+  transition: all 0.3s;
 }
-.footer-content .service-widget .list li a:hover{
-  color: #470585;
+
+.footer-content .service-widget .list li a:hover {
+  color: white;
+  background-color: #640eb5;
+  padding: 2px;
+  border-radius: 3px;
 }
-.footer-content .contact-widget p{
+
+.footer-content .contact-widget p {
   color: #9ea0a9;
   margin-bottom: 15px;
 }
-.footer-content .contact-widget{
-  
-}
-.footer-content .contact-widget .footer-title{
+
+.footer-content .contact-widget {}
+
+.footer-content .contact-widget .footer-title {
   margin-bottom: 29px;
 }
 
@@ -682,13 +709,13 @@ margin: 30px 0;
 
 /** footer-bottom **/
 
-.footer-bottom{
+.footer-bottom {
   background-color: #5000c8;
   padding: 20px 0px;
   margin-bottom: 0;
 }
 
-.copyright{
+.copyright {
   color: rgb(203, 214, 221);
   text-align: center;
 }
@@ -696,260 +723,265 @@ margin: 30px 0;
 /* footer responsive */
 @media (max-width: 767px) {
   .slogan {
-font-size: 1.2rem;
+    font-size: 1.2rem;
   }
 
-  
+
 
   @media (max-width: 578px) {
     .slogan {
-  font-size: 1rem;
+      font-size: 1rem;
     }
 
- 
-    
-}
 
 
-
-
-
-/* End social media */
-
-@keyframes anim2 {
-  0% {
-    transform: translateY(4px);
   }
 
-  100% {
-    transform: translateY(-4px);
-  }
-}
 
 
 
 
-/* Button  */
+  /* End social media */
 
-/* ======== Button 29 =====*/
+  @keyframes anim2 {
+    0% {
+      transform: translateY(4px);
+    }
 
-.button-29 {
-  align-items: center;
-  appearance: none;
-  background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
-  border: 0;
-  border-radius: 6px;
-  box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-flex;
-  font-family: "JetBrains Mono",monospace;
-  height: 48px;
-  justify-content: center;
-  line-height: 1;
-  list-style: none;
-  overflow: hidden;
-  padding-left: 16px;
-  padding-right: 16px;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transition: box-shadow .15s,transform .15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
-  will-change: box-shadow,transform;
-  font-size: 18px;
-}
-
-.button-29:focus {
-  box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
-}
-
-.button-29:hover {
-  box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
-  transform: translateY(-2px);
-}
-
-.button-29:active {
-  box-shadow: #3c4fe0 0 3px 7px inset;
-  transform: translateY(2px);
-}
- 
-
-/* button-70 */
-.button-70 {
-  background-image: linear-gradient(#0dccea, #0d70ea);
-  border: 0;
-  border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, .3) 0 5px 15px;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  font-family: Montserrat,sans-serif;
-  font-size: .9em;
-  margin: 5px;
-  padding: 10px 15px;
-  text-align: center;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.button-70:hover{
-  color: white;
-}
-
-
-/* btn 7 */
-.button-7 {
-  background-color: #0095ff;
-  border: 1px solid transparent;
-  border-radius: 3px;
-  box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
-  box-sizing: border-box;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 1.15385;
-  margin: 0 1rem;
-  outline: none;
-  padding: 8px .8em;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  vertical-align: baseline;
-  white-space: nowrap;
-}
-
-.button-7:hover,
-.button-7:focus {
-  background-color: #07c;
-  color: white;
-}
-
-.button-7:focus {
-  box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
-}
-
-.button-7:active {
-  background-color: #0064bd;
-  box-shadow: none;
-}
-
-
-/* End footer */
-
-/* responsive */
-@media (max-width: 1200px) {
-  .header-text {
-    font-size: 3rem;
+    100% {
+      transform: translateY(-4px);
+    }
   }
 
-  .motto-footer {
-    font-size: 1.2rem;
-  }
-}
 
-@media (max-width: 990px) {
-  .header-text {
-    font-size: 2.5rem;
-  }
 
-  .footer-links-header{
-    font-size: 1rem;
-    margin-top: 1rem;
-  }
 
-  .nav-link {
-    display: flex;
+  /* Button  */
+
+  /* ======== Button 29 =====*/
+
+  .button-29 {
+    align-items: center;
+    appearance: none;
+    background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #5468ff 100%);
+    border: 0;
+    border-radius: 6px;
+    box-shadow: rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, rgba(58, 65, 111, .5) 0 -3px 0 inset;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: "JetBrains Mono", monospace;
+    height: 48px;
     justify-content: center;
+    line-height: 1;
+    list-style: none;
+    overflow: hidden;
+    padding-left: 16px;
+    padding-right: 16px;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transition: box-shadow .15s, transform .15s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: nowrap;
+    will-change: box-shadow, transform;
+    font-size: 18px;
   }
 
-  .flash-container {
-    width: 80%;
+  .button-29:focus {
+    box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
   }
 
-  .motto-footer {
-    font-size: 1rem;
+  .button-29:hover {
+    box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+    transform: translateY(-2px);
   }
 
-  .top-link {
-    right: 5%;
-    bottom: 5%;
-  }
-
-  .top-footer-line > p{
-    font-size: 1.5rem;
-  }
-}
-
-@media (max-width: 800px) {
-  .logo-footer {
-    width: 150px;
-    height: 200px;
-  }
-
-  #brand-name {
-    font-size: 2rem;
-  }
-
-  .motto-footer {
-    font-size: 0.8rem;
-  }
-
-  .logo-navbar {
-    display: none;
-  }
-}
-
-
-@media (max-width: 768px) {
-  #footer {
-    background: #141E30;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
-  }
-
-  .footer-links-header{
-    font-size: 1rem;
-    margin-top: 1rem;
+  .button-29:active {
+    box-shadow: #3c4fe0 0 3px 7px inset;
+    transform: translateY(2px);
   }
 
 
-}
-
-@media (max-width: 450px) {
-  .footer-links-header {
-    font-size: 1rem;
+  /* button-70 */
+  .button-70 {
+    background-image: linear-gradient(#0dccea, #0d70ea);
+    border: 0;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, .3) 0 5px 15px;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    font-family: Montserrat, sans-serif;
+    font-size: .9em;
+    margin: 5px;
+    padding: 10px 15px;
+    text-align: center;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
   }
 
-  .brand {
-    font-size: 1rem;
+  .button-70:hover {
+    color: white;
   }
 
-  html {
-    font-size: 90%;
-  }
-  .top-footer-line > p{
-    font-size: 1.3rem;
-  }
-  .useful-links {
-    font-size: 1rem;
-  }
-}
 
-@media (max-width: 350px) {
-  .brand {
-    font-size: 0.8rem;
+  /* btn 7 */
+  .button-7 {
+    background-color: #0095ff;
+    border: 1px solid transparent;
+    border-radius: 3px;
+    box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans", sans-serif;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 1.15385;
+    margin: 0 1rem;
+    outline: none;
+    padding: 8px .8em;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: baseline;
+    white-space: nowrap;
   }
-}
+
+  .button-7:hover,
+  .button-7:focus {
+    background-color: #07c;
+    color: white;
+  }
+
+  .button-7:focus {
+    box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
+  }
+
+  .button-7:active {
+    background-color: #0064bd;
+    box-shadow: none;
+  }
+
+
+  /* End footer */
+
+  /* responsive */
+  @media (max-width: 1200px) {
+    .header-text {
+      font-size: 3rem;
+    }
+
+    .motto-footer {
+      font-size: 1.2rem;
+    }
+  }
+
+  @media (max-width: 990px) {
+    .header-text {
+      font-size: 2.5rem;
+    }
+
+    .footer-links-header {
+      font-size: 1rem;
+      margin-top: 1rem;
+    }
+
+    .nav-link {
+      display: flex;
+      justify-content: center;
+    }
+
+    .flash-container {
+      width: 80%;
+    }
+
+    .motto-footer {
+      font-size: 1rem;
+    }
+
+    .top-link {
+      right: 5%;
+      bottom: 5%;
+    }
+
+    .top-footer-line>p {
+      font-size: 1.5rem;
+    }
+  }
+
+  @media (max-width: 800px) {
+    .logo-footer {
+      width: 150px;
+      height: 200px;
+    }
+
+    #brand-name {
+      font-size: 2rem;
+    }
+
+    .motto-footer {
+      font-size: 0.8rem;
+    }
+
+    .logo-navbar {
+      display: none;
+    }
+  }
+
+
+  @media (max-width: 768px) {
+    #footer {
+      background: #141E30;
+      /* fallback for old browsers */
+      background: -webkit-linear-gradient(to right, #243B55, #141E30);
+      /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to right, #243B55, #141E30);
+      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    }
+
+    .footer-links-header {
+      font-size: 1rem;
+      margin-top: 1rem;
+    }
+
+
+  }
+
+  @media (max-width: 450px) {
+    .footer-links-header {
+      font-size: 1rem;
+    }
+
+    .brand {
+      font-size: 1rem;
+    }
+
+    html {
+      font-size: 90%;
+    }
+
+    .top-footer-line>p {
+      font-size: 1.3rem;
+    }
+
+    .useful-links {
+      font-size: 1rem;
+    }
+  }
+
+  @media (max-width: 350px) {
+    .brand {
+      font-size: 0.8rem;
+    }
+  }
