english club leader

--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -531,6 +531,18 @@
         <div class="swiper-slide">
           <img src="https://i.ibb.co/tPqrN2Q/CAGE-FISCOM.jpg" alt="CAGE-FISCOM">
         </div>
+
+        <div class="swiper-slide">
+          <img src="https://res.cloudinary.com/dccibzcxp/image/upload/v1701751618/Afro%20e-school/2_bqzep8.png" alt="afro e-school">
+        </div>
+
+        <div class="swiper-slide">
+          <img src="https://res.cloudinary.com/dccibzcxp/image/upload/v1710898254/afrohk_logo_wb_ejmc0x.png" alt="afro HK">
+        </div>
+
+        <div class="swiper-slide">
+          <img src="https://res.cloudinary.com/dccibzcxp/image/upload/v1711596123/bmn_xth0d1.jpg" alt="BMN">
+        </div>       
       </div>
       <!-- pagination -->
       <div class="swiper-pagination py-2"></div>
