--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="main-footer">
+<footer id="footer" class="main-footer">
   <div class="top-footer-line">
     <p>ALL is commited to provide better language learning experience in Africa</p>
   </div>
