--- a/views/programs/pecp/myPecpSpace.ejs
+++ b/views/programs/pecp/myPecpSpace.ejs
@@ -17,7 +17,7 @@
     .pecs {
       padding: 2rem 5rem;
       text-align: center;
-      font-family: 'Rye', cursive;
+      /* font-family: 'Rye', cursive; */
       color: rgb(13, 87, 152);
     }
 
@@ -176,7 +176,7 @@
 
   <div class="container col-lg-8 mb-5 d-flex flex-column align-items-center">
     <div class="pecp_wrapper mt-5">
-      <h1 class="pecs">Espace Personnel d'Apprentissage</h1>
+      <h1 class="pecs">My English Learning Space</h1>
       <hr>
       <div class="d-flex justify-content-evenly flex-wrap py-3">
         <a href="#courses" class="ms-2 activity-links d-block">Mes cours</a>
@@ -394,7 +394,7 @@
     <h3 class="section-title">Ma progression</h3>
     <div class="container col-lg-8 mt-3">
 
-      <% if(student.pecpStudentProgress.length> 0) {%>
+      <% if(student.pecpStudentProgress.length > 0) {%>
         <div class="my-4" style=" border: 1px solid rgb(33, 12, 15); border-radius: 4px;">
 
           <h4 class="text-center py-3 mb-3" style="letter-spacing: 0.1rem; color: white; background: #1488CC;  /* fallback for old browsers */
