--- a/views/admindashboard.ejs
+++ b/views/admindashboard.ejs
@@ -101,7 +101,12 @@
   <div class="card card-body">
     <!-- Managing English Club -->
     <div class="container col-md-10 my-5" style="background-color: rgb(255, 255, 255);">
-      <h1 class="text-primary text-center py-3">Natural English Clubs</h1>
+      <h1 class="text-primary text-center py-3">Afro English hubs</h1>
+      <div class="d-flex justify-content-around">
+        <a class="btn btn-lg btn-primary m-3" href="/englishlang4all/clubs/Burkina-Faso/hubs">Burkina</a>
+      </div>
+
+      <h1 class="text-primary text-center py-3"> Create a new hub </h1>
       <div class="d-flex flex-column align-items-center justify-content-around">
         <div class="col-8 px-2" style="background-color: aliceblue; border: 1px solid black; border-radius: 5px;">
           <form action="/admindashboard/newEnglishClubHub" method="POST">
