--- a/views/programs/englishlang4all/englishClubs/show.ejs
+++ b/views/programs/englishlang4all/englishClubs/show.ejs
@@ -597,7 +597,7 @@
                                   aria-label="Close"></button>
                               </div>
                               <div class="modal-body">
-                                <div>
+                                <div class="px-5">
                                   <%- club.articles[i].articleContent%>
                                 </div>
                               </div>
