footer background color

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -125,7 +125,7 @@
               <p>Pissy, Ouagadougou</p>
               <p>+226 67323131</p>
               <p>+226 53344444</p>
-              <p>afrohkteam@afrohk.com</p>
+              <p>contact@afrohk.com</p>
             </div>
           </div>
         </div>
